Fix overflow of elements

--- a/css/integrated/src/sidebar.css
+++ b/css/integrated/src/sidebar.css
@@ -41,7 +41,7 @@
 	width: 250px;
 	position: absolute;
 	top: 145px;
-	bottom: 350px;
+	bottom: 400px;
 	height: auto !important;
 	background-color: #F5F5F5;
 	overflow-y: auto;
